# snakypy-cookiecutter

./: .editorconfig  .flake8  .gitignore  .travis.yml  LICENSE  README.md  cookiecutter.json  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yml
hooks/: post_gen_project.py
tests/: base.py  test_bake_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .flake8  .gitignore  .imake  LICENSE  README.md  README.rst  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/snakypy/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
